--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 
         <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
         <script type="text/javascript" src="bower_components/moment/moment.js"></script>
-        <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
+        <script type="text/javascript" src="bower_components/lodash/dist/lodash.js"></script>
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/calendar.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
+        <script src="//localhost:35729/livereload.js"></script>
     </body>
 </html>
